gobmkida/c2/autohelperowl_defendpat368
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/autohelperowl_defendpat368/src/patterns/owl_defendpat.c:5461:30: error: use of undeclared identifier 'invalid_operation'
return !( ( v10 + v11 < 0) ^ __OFADD__( v10, v11) | ( v10 + v11 == 0)) 
                             ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/autohelperowl_defendpat368/src/patterns/owl_defendpat.c:5251:25: note: expanded from macro '__OFADD__'
#define __OFADD__(x, y) invalid_operation // Generate overflow flag for (x+y)
                        ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/autohelperowl_defendpat368/src/obj/3/owl_defendpat.o] Error 1
